--- a/npcs/ahktoma.yaml
+++ b/npcs/ahktoma.yaml
@@ -165,7 +165,7 @@ npc:
     #
     # Required.
     #
-    age: older adult
+    age: Older Adult
 
     #
     # Races (case insensitive):
@@ -239,7 +239,7 @@ npc:
     #
     # Required.
     #
-    class: wizard
+    class: Wizard
 
     #
     # D & D subclasses (case insensitive):
@@ -289,15 +289,6 @@ npc:
     #
     alignment: Lawful Neutral
 
-    #
-    # Alignment tendencies:
-    # same as alignment, can be 0 or more.
-    #
-    # Optional.
-    #
-    tendencies:
-    - N/A
-
 
     #
     # Languages the character speaks
@@ -335,7 +326,7 @@ npc:
     factions:
     - id: N/A
       name: N/A
-      role: Scholar
+      role: N/A
 
 
     #
@@ -464,33 +455,67 @@ npc:
   # ???Max length???
   #
   specialties:
+    saving-throws:
+    - Wisdom
+    - Intelligence
+    damage-immunities:
+    N/A
+    condition-immunities:
+    N/A
+    resistances:
+    N/A
     skills:
-     - Ibis-Head Aven Traits:
-         - Kefnets Blessing: Can add half her proficiency bonus, rounded down, to any Intelligence check she makes that doesn’t already include herr proficiency bonus            
-       Wizard Abilities:
-         - Arcane Recovery: After a short rest can recover a spell slot up to 3rd level
-           Spellcasting: 
-           - Description: DC 15
-             Cantrips: Message, Minor Illusion, Mage Hand, Fire Bolt
-             1st Level: Charm Person, Comprehend Languages, Protection from Evil, Magic Missle
-             2nd Level: Mirror Image, Hold Person, Alter Self 
-             3rd Level: Counterspell, Dispel Magic, Fireball      
-       School of the Arcane Weave Abilities:
-       - Arcane Sight: Can see a faint glow on all magical sources within 10 feet, Can do this 3 times per short rest           
-         Magical Weaving: Can attempt to change a spell that passes or happens within 15 feet. Using a reaction can attempt to change the spell being cast into a spell 1 level lower that she has prepared. 
-                          The DC is 15 plus the Spell being changed's level and increases by 2 for each level she wants to lower the spell. She can also choose to empower an ally's spell as its being cast 
-                          by raising its spell level by 1. The DC is 15+ the spells level.         
-        
-
-    special-abilities:
-    - Proficiencies: Arcana, Investigation, Persuasion, History, Religion, Insight    
+    - Librarian Training
+    proficiencies:
+    - Arcana
+    - Investigation
+    - History    
+    - Religion
+    - Persuasion
+    - Insight
+  special-abilities:
+  - title: Ibis-Head Aven Abilities
+  - abilities: 
+    - title: Kefnets Blessing
+    - content: Can add half her proficiency bonus, rounded down, to any Intelligence check she makes that doesn’t already include herr proficiency bonus            
+  - title: Wizard Abilities
+  - abilities:
+    - title: Arcane Recovery
+    - content: After a short rest can recover a spell slot up to 3rd level
+    - title: Spell Mastery
+    - content: Choose a 1st-level Wizard spell and a 2nd-level Wizard spell that are in your Spellbook. You can cast those Spells at their lowest level without expending a spell slot when you have them prepared. 
+               If you want to cast either spell at a higher level, you must expend a spell slot as normal
+    - title: Signature Spells
+    - content: Choose two 3rd-level Wizard Spells in your Spellbook as your Signature Spells. You always have these Spells prepared, they don't count against the number of Spells you have prepared, and you can 
+               cast each of them once at 3rd Level without expending a spell slot.			  
+  - title: Spellcasting
+  - abilities:
+    - title: Spell DC
+    - content: 15
+    - title: Cantrips
+    - content:  Message, Minor Illusion, Mage Hand, Fire Bolt
+    - title: 1st Level
+    - content: Charm Person, Comprehend Languages, Protection from Evil, Magic Missle
+    - title: 2nd Level
+    - content: Mirror Image, Hold Person, Alter Self 
+    - title: 3rd Level
+    - content: Counterspell, Dispel Magic, Fireball      
+  - title: School of Arcane Weave Abilities
+  - abilities: 
+    - title: Arcane Sight
+    - content: You can use your action to concentrate to see arcane energy. You can see a faint glow on magical sources within 10 feet of you that are within line of sight, this effect lasts for up to 1 minute. You can 
+               do this a number of times equal to your proficiency bonus, you recover all uses after a short or long rest.          
+    - title: Magical Weaving
+    - content: You can try to change a spell that travels through or that its effect happens within 15 feet of you. Before the spell performs the desired effect, by using your reaction you try to make the spell being 
+               cast into another spell of 1 lower level that you have prepared You can't modify can trips using this feature. You roll one d20 and add your proficiency bonus, the DC to be able to change the spell is 
+               15 +(spell Level) to modify it into an even lower spell level. the DC increases by 2 per level you want to lower the spell You can also choose to try to empower a targeting spell from an ally, you can 
+               use your reaction to increase the spell level by one at the point of casting. The DC is 15 +(spell level). If the spell can't be enhanced, nothing happens. If you succeed to modify the spel~ You are 
+               unable to cast spells other than can trips on your next turn.    
     
-    attacks: |
-      Spell attacks
-    combat-tactics: |
-      Not much of a fighter, will use her spellcasting until she can flee
-    special-equipment:
-      N/A
+  - title: Attacks
+  - content: Spell attacks
+  - title: Combat Tactics
+  - content: Not much of a fighter, will use her spellcasting until she can flee
                                                                    
   profile:
 
@@ -503,7 +528,7 @@ npc:
     #
     background-story: |
       In her youth, Ahktoma was like the rest of her crop, she spent all of her time training for The Trials. One day while training in the Library of Kefnet, somebody left out an old ancient tome for her to discover that 
-      revealed pieces of the true history of Amonkhet.  Since then she has devoted her life to researching and uncovering the real history of her world while hiding her search from her superiors
+      revealed pieces of the true history of Amonkhet. Since then she has devoted her life to researching and uncovering the real history of her world, while hiding her search from her superiors
 
       
     #
