--- a/npcs/ahshani_dondarion.yaml
+++ b/npcs/ahshani_dondarion.yaml
@@ -165,7 +165,7 @@ npc:
     #
     # Required.
     #
-    age: young adult
+    age: Young Adult
 
     #
     # Races (case insensitive):
@@ -449,11 +449,11 @@ npc:
   # All integers.
   #
   stats:
-    armour-class: 20
+    armour-class: 21
     hit-points: 54
     speed: 30
-    str: 18
-    dex: 16
+    str: 16
+    dex: 18
     con: 14
     int: 12 
     wis: 10
@@ -467,31 +467,74 @@ npc:
   # ???Max length???
   #
   specialties:
+    saving-throws:
+    - Wisdom
+    - Intelligence
+    damage-immunities:
+    N/A
+    condition-immunities:
+    N/A
+    resistances:
+    Fire
     skills:
-    - Dragonborn Abilities:
-      - Breathe Weapon: Can exhale fire in a 15 foot cone with a DC 13. A creature takes 2d6 damage on a failed save, and half as much damage on a successful one.           
-        Damage Resistance: Resistance to Fire     
+    - Librarian Training
+    proficiencies:
+    - Investigation
+    - History    
+    - Religion
+    - Persuasion
+    - Insight
+  special-abilities:
+  - title: Metallic Dragonborn Abilities
+  - abilities: 
+    - title: Breath Weapon
+    - content: When you take the Attack action on your turn, you can replace one of your attacks with an exhalation of magical energy in a 15-foot cone. Each creature in that area must make a Dexterity saving throw 
+               (DC = 8 + your Constitution modifier + your proficiency bonus). On a failed save, the creature takes 1d10 Fire damage. On a successful save, it takes half as
+               much damage. This damage increases by 1d10 when you reach 5th level (2d10), 11th level (3d10), and 17th level (4d10).
+    - title: Draconic Resistance
+    - content: You have resistance to Fire damage.
+    - title: Metallic Breath Weapon
+    - content: At 5th level, you gain a second breath weapon. When you take the Attack action on your turn, you can replace one of your attacks with an exhalation in a 15-foot cone. The save DC for this breath
+               is 8 + your Constitution modifier + your proficiency bonus. Whenever you use this trait, choose one
+               Enervating Breath - Each creature in the cone must succeed on a Constitution saving throw or become incapacitated until the start of your next turn.
+               Repulsion Breath - Each creature in the cone must succeed on a Strength saving throw or be pushed 20 feet away from you and be knocked prone.
+               Once you use your Metallic Breath Weapon, you can’t do so again until you finish a long rest.     
+  - title: Fighter Abilities
+  - abilities:
+    - title: Fighting Style
+    - content: Dueling - When you are wielding a melee weapon in one hand and no other weapons, you gain a +2 bonus to damage rolls with that weapon
+    - title: Second Wind
+    - content: Bonus Action to regain 1d10+5
+    - title: Action Surge
+    - content: Once every short/long rest can take an extra action
+    - title: Extra Attack
+    - content: Can attack twice each turn
+  - title: Samurai Abilities
+  - abilities: 
+    - title: Fighting Spirit
+    - content: Your intensity in battle can shield you and help you strike true. As a bonus action on your turn, you can give yourself advantage on all weapon attack rolls until the end of the current turn. When you 
+               do so, you also gain 5 temporary hit points. The number of hit points increases when you reach certain levels in this class, increasing to 10 at 10th level and 15 at 15th level. You can use this feature
+               three times. You regain all expended uses of it when you finish a long rest.    
     
-      Fighter Abilities:
-       - Fighting Style: Dueling
-         Second Wind: Bonus Action to regain 1d10 + 5
-         Action Surge: Once every short/long rest can take an extra action
-         Extra Attack: Can attack twice each turn
- 
-      Samurai Abilities:
-      - Fighting Spirit: As a bonus action on his turn, he can give himself advantage on all weapon attack rolls until the end of the current turn. When he does so, he also gains 5 temporary hit points.    
-
-    special-abilities:
-    - Proficiencies: Investigation, Persuasion, History, Religion, Insight    
-    
-    attacks: |
-      2 Attacks with his Katana
-    combat-tactics: |
-      He meets his opponents head on and will do his best to turn every fight into a one on one duel rather than getting mobbed
-    special-equipment:
-    - His master's Phantom Katana - Three charges renewed at dawn; 1 charge - cast Phantasmal Force on strike and the target sees Ahshani as the most horrifying creature they can imagine and the target sees 
-      him/her self surrounded by other horrifying creatures.
-    - +2 Full Plate Armor
+  - title: Attacks
+  - content: 2 Attacks with his Phantom Katana or with his Bow of Speed at distance
+  - title: Combat Tactics
+  - content: He meets his opponents head on and will do his best to turn every fight into a one on one duel rather than getting mobbed
+  - title: Special Equipment
+  - abilities:
+    - title: His Master's Phantom Katana
+    - content: A slightly transparent sword that seems to have a black and blue sheen to it when exposed to light. You have a +2 bonus to attack and damage rolls with this magic weapon.
+               Finesse Weapon - deals 1d8+Dex damage
+               Phantom Strike - As a bonus action, you may blink to a space behind a creature within 60 feet of you. Until the start of your next turn, you have advantage on your attack rolls with this weapon against the 
+                                creature you blinked behind. This effect can be used 2 times and the katana regains all uses of this effect at dawn.
+               Quick Slash - When you hit a creature with this weapon, you may immediately make another attack at the creature as a bonus action.
+               Illusionary Double - At the start of your turn, an illusion of you appears in your space that lasts until the end of your next turn. As a bonus action, you may blink to this illusion.
+    - title: +2 Half-Plate Samurai Armor
+    - content: Breast plate, grieves, bracers, and helmet of immaculately kept magical samurai-style plate armor that adds +2 to its wearers AC
+    - title: Bracers of Archery
+    - content: These bracers give you +2 to your damage rolls with longbows and shortbows. They also give you proficiency in those weapons if you didn’t already have them.
+    - title: Bow of Speed
+    - content: This bow gives a +2 bonus to attack and damage rolls. This bow fires two pieces of ammunition at once. You roll the attack and damage rolls for each piece of ammunition individually.
                                                                    
   profile:
 
@@ -505,7 +548,7 @@ npc:
     background-story: |
       Ahshani came from a small but noble house from a distant continent [any with PanAsian historical flare].  He trained from a young age in the way of the samurai and according to his master was destined to be the 
       greatest of his time. As a teen, he fell in love with a local serving girl, much below his station. Forbidden by his house to see her, he continued to sneak out to spend time with her. One night while he was 
-      clandestinely in his lovers arms, his master was assassinated and his house was murdered. Blaming himself, Ahshani gathered his armor and his master's blade and left his home, becoming a ronin. Swearing to fight 
+      clandestinely in his lovers arms, his master was assassinated and his entire house was murdered. Blaming himself, Ahshani gathered his armor and his master's blade and left his home, becoming a ronin. Swearing to fight 
       against evil wherever he finds it, all the while searching for the answers to who murdered his family their motivations for doing so.
 
       
@@ -518,4 +561,4 @@ npc:
     # No length limit for now.
     #
     personality: |
-      Ahshani is a tall and broad, gold-scaled dragon born, He wears full golden plate armor and helmet and always carries his katana. 
+      Ahshani is a tall and broad, gold-scaled dragon born, He wears golden samurai-style plate armor and helmet and always carries his katana. 
