--- a/npcs/ahshani_dondarion.yaml
+++ b/npcs/ahshani_dondarion.yaml
@@ -471,11 +471,11 @@ npc:
     - Wisdom
     - Intelligence
     damage-immunities:
-    N/A
+    - N/A
     condition-immunities:
-    N/A
+    - N/A
     resistances:
-    Fire
+    - Fire
     skills:
     - Librarian Training
     proficiencies:
