--- a/npcs/arthon_noble_warhorse.yaml
+++ b/npcs/arthon_noble_warhorse.yaml
@@ -83,7 +83,7 @@ metadata:
   # For now, I suggest: convert the character name to lower case,
   # and replace all spaces and punctuation with underscores (_)
   #
-  id: Arthon_Noble_Warhorse
+  id: arthon_noble_warhorse
 
   #
   # The name of the submitter (your name).
@@ -134,10 +134,9 @@ npc:
   # Required.
   # Max length: ...
   #
-  name: Arthon
+  name: Arthon, Noble Warhorse
   
   # should the npc have a nickname, as most of us do
-  nickname: Noble Warhorse
 
   #
   # The NPC artwork.
@@ -242,7 +241,7 @@ npc:
     #
     # Required.
     #
-    class: Civilian
+    class: N/A
 
     #
     # D & D subclasses (case insensitive):
@@ -338,7 +337,7 @@ npc:
     factions:
     - id: The_Dead_Hunters
       name: The Dead Hunters
-      role: The Phantoms Steed
+      role: The Phantom's Steed
 
 
     #
@@ -456,7 +455,7 @@ npc:
     con: 17
     int: 9 
     wis: 12
-    cha: 11
+    cha: 16
 
   #
   # Special characteristics.
@@ -466,33 +465,61 @@ npc:
   # ???Max length???
   #
   specialties:
+    saving-throws:
+    - Strength
+    - Constitution
+    damage-immunities:
+    - N/A
+    condition-immunities:
+    - Frightened and Charmed
+    resistances:
+    - Slashing, Piercing and Bludgeoning
     skills:
-          
-    - Horse Abilities:
-       - Trampling Charge: If Arthon mvoes at least 20 feeet straight towards a creature and hits with a hoof attack, it must make a DC18 Strength Save or be knocked prone
-         Hoof Attack: Reach 5 feet, two attacks doing 2d6+4 bludgeoning damage each 
-      Spellcasting: Can cast Crusader's Mantle, Guiding Bolt, Sacred Flame and Sunburst at Level 5 with a DC16       
-
-
-    special-abilities:
-    - Proficiencies: Athletics, Animal Handling, Insight, Perception, Survival, Intimidation   
-      Feats: Charger, Crusher, Durable, Heavy Armor Master, Mobile, 
-      Legendary Resistance: (3/Day), If Arthon, Noble Warhorse fails a saving throw he can choose to succeed instead 
-      Legendary Actions: 
-      - Description: Arthon, Noble Warhorse can take 3 Legendary Actions. Choosing from the options from below, Only one Legendary Action can be used at a time and only at the end of another creature's turn. 
-                     Arthon, Noble Warhorse regains spent Legendary Actions at the start of his turn
-        Lords Roar: Arthon, Noble Warhorse can roar causing all creatures within 30 feet to make a DC16 Wisom Save or become firghtened, if those creatures are undead they count as Turned
-        Lords Hand: Arthon, Noble Warhorse can heal himself for 1d10 HP
-        Lords Back Kick: Arthon, Noble Warhorse can make a savage hoof attack with his hind legs dealing 2d12+6. If this attack deals damage to a creature, that creature must make a Strength Saving Throw DC25 or be 
-                         knocked prone    
+    - Charging
+    proficiencies:
+    - Athletics
+    - Animal Handling
+    - Insight    
+    - Perception
+    - Survival
+    - Intimidation
+  special-abilities:
+  - title: War Horse Abilities
+  - abilities: 
+    - title: Trampling Charge
+    - content: If you move at least 20 feeet straight towards a creature and hits with a hoof attack, that creature must make a DC18 Strength Save or be knocked prone
+    - title: Hoof Attack
+    - content: Reach 5 feet, two attacks doing 2d6+4 bludgeoning damage each
+    - title: Spellcasting
+    - content: Can cast Crusader's Mantle, Guiding Bolt, Sacred Flame and Sunburst at Level 5 with a DC16          
+  - title: Feats
+  - content: Charger, Crusher, Durable, Heavy Armor Master, Mobile 
+  - title: Legendary Resistance
+  - content: (3/Day), If Arthon, Noble Warhorse fails a saving throw he can choose to succeed instead 
+  - title: Legendary Actions
+  - content: Arthon, Noble Warhorse can take 3 Legendary Actions. Choosing from the options from below, Only one Legendary Action can be used at a time and only at the end of another creature's turn. Anastasia Dumas regains 
+            spent Legendary Actions at the start of her turn.
+  - abilities:
+    - title: Lords Roar
+    - content: Arthon, Noble Warhorse can roar causing all creatures within 30 feet to make a DC16 Wisom Save or become firghtened, if those creatures are undead they count as Turned
+    - title: Lords Hand
+    - content: Arthon, Noble Warhorse can heal himself for 1d10 HP
+    - title: Lords Back Kick
+    - content: Arthon, Noble Warhorse can make a savage hoof attack with his hind legs dealing 2d12+6. If this attack deals damage to a creature, that creature must make a Strength Saving Throw DC25 or be knocked prone    
     
-    attacks: |
-      has 2 attacks
-    combat-tactics: |
-      Will only fight if directly attacked or if told to by his master
-    special-equipment:
-    - Angelic Plate Mail
-    - 2x Saddle Bags of Holding
+  - title: Attacks
+  - content: has 2 attacks
+  - title: Combat Tactics
+  - content: Will only fight if directly attacked or if told to by his master
+
+  - title: Special Equipment
+  - abilities:
+    - title: Angelic Plate Mail
+    - content: While wearing this armor, you gain a +2 bonus to AC, you have advantage on all saving throws against effects caused by fiends, and it creates an aura in a 5-foot radius around you. Fiends in the aura have 
+               disadvantage on saving throws.
+    - title: 2x Saddle Bags of Holding
+    - content: This bag has an interior space considerably larger than its outside dimensions, roughly 2 feet in diameter at the mouth and 4 feet deep. The bag can hold up to 500 pounds, not exceeding a volume of 64 cubic feet. 
+               The bag weighs 15 pounds, regardless of its Contents. Retrieving an item from the bag requires an action.
 
     
   profile:
